--- a/workspace/spring-basics/pom.xml
+++ b/workspace/spring-basics/pom.xml
@@ -17,6 +17,22 @@
     <artifactId>spring-context</artifactId>
     <version>5.1.8.RELEASE</version>
 </dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-test</artifactId>
+    <version>5.1.8.RELEASE</version>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>5.1.8.RELEASE</version>
+</dependency>
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.11</version>
+</dependency>
   
   </dependencies>
 </project>
